[project]
name = "modelmesh"
version = "0.1.0"
description = "MCP server exposing Codex / Gemini / OpenRouter / DeepSeek / Grok as subagent tools, with stable session IDs for multi-turn continuity."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "ModelMesh contributors" }]
keywords = ["mcp", "claude-code", "subagent", "codex", "gemini", "openrouter", "deepseek", "grok", "xai", "llm", "modelmesh"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]
dependencies = [
  "mcp>=1.2.0",
  "httpx>=0.27.0",
]

[project.scripts]
modelmesh = "server:main"

[project.urls]
Homepage = "https://github.com/asakur44/ModelMesh"
Issues = "https://github.com/asakur44/ModelMesh/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["server.py"]
